# moodlehack

./: .dockerignore  .gitignore  Dockerfile  README.md  default.nix  docker-compose.yml  entrypoint.sh  flake.nix  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: ci.yml  docker-publish.yml
examples/: example.env  settings.toml
moodlehack/: manage.py
moodlehack/accounts/: urls.py
moodlehack/accounts/templates/accounts/: login.html
moodlehack/answers/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
moodlehack/answers/management/commands/: migrate_periods.py
moodlehack/answers/migrations/: 0001_initial.py  0002_alter_answer_period.py  0002_alter_period_options.py  0003_alter_answer_options_alter_period_options_and_more.py
moodlehack/answers/static/answers/js/: bs.theme.mode.js  copy-clipboard-btn.js  modal-answer-delete-handler.js  notifications.js
moodlehack/answers/templates/answers/: answer_detail.html  base.html  index.html
moodlehack/answers/templates/answers/includes/: _answers.html  _brand.html  _extra_menu.html  _filters_form.html  (+6 more)
moodlehack/moodlehack/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
moodlehack/templates/: 404.html  base.html  errors.html
nginx/: Dockerfile  default.conf
nix/: django-typer.nix  docker.nix  nixpkgs.nix  overlays.nix  version.nix
src/moodlehack/: __init__.py  manage.py
src/moodlehack/accounts/: apps.py  urls.py  views.py
src/moodlehack/answers/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
src/moodlehack/answers/migrations/: 0001_initial.py  0002_alter_period_options.py  0003_alter_answer_options_alter_period_options_and_more.py  0004_alter_answer_options_alter_category_options_and_more.py  0005_answer_note.py
src/moodlehack/answers/templatetags/: navigation_tags.py  text_tags.py  ui_tags.py
src/moodlehack/core/: __init__.py  asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
src/moodlehack/fs/: __init__.py  paths.py
src/moodlehack/serve/: __init__.py  apps.py  asgi.py  lifespan.py  middleware.py  routes.py  runner.py
src/moodlehack/settings/: __init__.py  apps.py  base.py  django.py  paths.py  site.py  uvicorn.py
src/moodlehack/templates/: 404.html  base.html  errors.html
src/moodlehack/templates/admin/: base_site.html
(+24 files in other folders)
