[tool.poetry]
name = "moodlehack"
version = "0.1.0"
description = "App for hacking moodle tests"
authors = ["MOIS3Y <stepan@zhukovsky.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
drf-spectacular = "^0.27.2"
django-filter = "^24.3"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"
markdown = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
