[tool.poetry]
name = "moodlehack"
version = "0.2.0"
description = "App for hacking moodle tests"
authors = ["MOIS3Y <stepan@zhukovsky.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.2.10"
django-environ = "^0.12.0"
djangorestframework = "^3.16.1"
gunicorn = "^23.0.0"
drf-spectacular = "^0.29.0"
django-filter = "^25.2"
django-crispy-forms = "^2.5"
crispy-bootstrap5 = "^2025.6"
markdown = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
